--- a/src/i18n/strings/hr.json
+++ b/src/i18n/strings/hr.json
@@ -1,5 +1,5 @@
 {
     "Unknown device": "Nepoznati uređaj",
     "Dismiss": "Odbaci",
-    "Welcome to Pigeone": "Dobrodošli u Element"
+    "Welcome to Pigeone": "Dobrodošli u Pigeone"
 }
