--- a/src/i18n/strings/vls.json
+++ b/src/i18n/strings/vls.json
@@ -4,7 +4,7 @@
     "Invalid configuration: no default server specified.": "Oungeldige configuroasje: geen standoardserver ingegeevn.",
     "Unknown device": "Ounbekend toestel",
     "Dismiss": "Afwyzn",
-    "Welcome to Pigeone": "Welgekommn by Element",
+    "Welcome to Pigeone": "Welgekommn by Pigeone",
     "Sign In": "Anmeldn",
     "Create Account": "Account anmoakn",
     "Explore rooms": "Gesprekkn ountdekkn",
