--- a/src/i18n/strings/cy.json
+++ b/src/i18n/strings/cy.json
@@ -6,7 +6,7 @@
     "Invalid configuration: no default server specified.": "Gosodiad annilys: ni nodwyd gweinydd diofyn.",
     "Unknown device": "Dyfais anhysbys",
     "Dismiss": "Wfftio",
-    "Welcome to Pigeone": "Croeso i Element",
+    "Welcome to Pigeone": "Croeso i Pigeone",
     "Sign In": "Mewngofnodi",
     "Create Account": "Creu Cyfrif",
     "Explore rooms": "Archwilio Ystafelloedd",
