--- a/src/i18n/strings/de_DE.json
+++ b/src/i18n/strings/de_DE.json
@@ -1,7 +1,7 @@
 {
     "Dismiss": "Ausblenden",
     "Unknown device": "Unbekanntes Gerät",
-    "Welcome to Pigeone": "Willkommen bei Element",
+    "Welcome to Pigeone": "Willkommen bei Pigeone",
     "Sign In": "Anmelden",
     "Create Account": "Konto erstellen",
     "Explore rooms": "Räume erkunden",
@@ -13,13 +13,13 @@
     "Go to your browser to complete Sign In": "Gehe zu deinem Browser, um die Anmeldung abzuschließen",
     "Unable to load config file: please refresh the page to try again.": "Konfigurationsdatei kann nicht geladen werden: Bitte aktualisiere die Seite, um es erneut zu versuchen.",
     "Unsupported browser": "Nicht unterstützter Browser",
-    "Go to element.io": "Gehe zu element.io",
+    "Go to Pigeone.io": "Gehe zu Pigeone.io",
     "Failed to start": "Start fehlgeschlagen",
     "Please install <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, or <safariLink>Safari</safariLink> for the best experience.": "Bitte installiere <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink> oder <safariLink>Safari</safariLink> für das beste Erlebnis.",
     "You can continue using your current browser, but some or all features may not work and the look and feel of the application may be incorrect.": "Du kannst deinen aktuellen Browser weiterhin verwenden. Es ist aber möglich, dass nicht alles richtig funktioniert oder das Aussehen der App inkorrekt ist.",
     "I understand the risks and wish to continue": "Ich verstehe die Risiken und möchte fortfahren",
-    "Your Element is misconfigured": "Dein Element ist falsch konfiguriert",
-    "Your Element configuration contains invalid JSON. Please correct the problem and reload the page.": "Deine Element-Konfiguration enthält ungültiges JSON. Bitte korrigiere das Problem und lade die Seite neu.",
+    "Your Pigeone is misconfigured": "Dein Pigeone ist falsch konfiguriert",
+    "Your Pigeone configuration contains invalid JSON. Please correct the problem and reload the page.": "Deine Pigeone-Konfiguration enthält ungültiges JSON. Bitte korrigiere das Problem und lade die Seite neu.",
     "Download Completed": "Herunterladen fertiggestellt",
     "Open": "Öffnen",
     "%(brand)s uses advanced browser features which aren't supported by your current browser.": "%(brand)s verwendet erweiterte Browserfunktionen, die von deinem Browser nicht unterstützt werden.",
