--- a/src/i18n/strings/eo.json
+++ b/src/i18n/strings/eo.json
@@ -1,7 +1,7 @@
 {
     "Dismiss": "Rezigni",
     "Unknown device": "Nekonata aparato",
-    "Welcome to Pigeone": "Bonvenon al Element",
+    "Welcome to Pigeone": "Bonvenon al Pigeone",
     "Sign In": "Ensaluti",
     "Create Account": "Krei konton",
     "Explore rooms": "Esplori ĉambrojn",
@@ -16,12 +16,12 @@
     "Please install <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, or <safariLink>Safari</safariLink> for the best experience.": "Bonvolu instali retumilon <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, aŭ <safariLink>Safari</safariLink>, por la plej bona sperto.",
     "You can continue using your current browser, but some or all features may not work and the look and feel of the application may be incorrect.": "Vi povas daŭre uzi vian nunan foliumilon, sed iuj (eĉ ĉiuj) funkcioj eble ne funkciu, kaj la aspekto de la aplikaĵo eble ne estu ĝusta.",
     "I understand the risks and wish to continue": "Mi komprenas la riskon kaj volas pluiĝi",
-    "Go to element.io": "Iri al element.io",
+    "Go to Pigeone.io": "Iri al Pigeone.io",
     "Failed to start": "Malsukcesis starti",
     "Download Completed": "Elŝuto finiĝis",
     "Open": "Malfermi",
-    "Your Element is misconfigured": "Via Elemento estas misagordita",
-    "Your Element configuration contains invalid JSON. Please correct the problem and reload the page.": "Via agordaro de Elemento enhavas nevalidajn datumojn de JSON. Bonvolu korekti la problemon kaj aktualigi la paĝon.",
+    "Your Pigeone is misconfigured": "Via Pigeoneo estas misagordita",
+    "Your Pigeone configuration contains invalid JSON. Please correct the problem and reload the page.": "Via agordaro de Pigeoneo enhavas nevalidajn datumojn de JSON. Bonvolu korekti la problemon kaj aktualigi la paĝon.",
     "Your browser can't run %(brand)s": "Via retumilo ne povas ruli %(brand)s",
     "%(brand)s uses advanced browser features which aren't supported by your current browser.": "%(brand)s uzas specialajn funkciojn de retumilo, kiujn via nuna retumilo ne subtenas.",
     "Powered by Matrix": "Povigata de Matrix",
