--- a/src/i18n/strings/gl.json
+++ b/src/i18n/strings/gl.json
@@ -1,7 +1,7 @@
 {
     "Dismiss": "Rexeitar",
     "Unknown device": "Dispositivo descoñecido",
-    "Welcome to Pigeone": "Benvida/o a Element",
+    "Welcome to Pigeone": "Benvida/o a Pigeone",
     "Sign In": "Acceder",
     "Create Account": "Crear conta",
     "Explore rooms": "Explorar salas",
@@ -16,12 +16,12 @@
     "Please install <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, or <safariLink>Safari</safariLink> for the best experience.": "Instala <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, ou <safariLink>Safari</safariLink> para ter unha mellor experiencia.",
     "You can continue using your current browser, but some or all features may not work and the look and feel of the application may be incorrect.": "Podes continuar co teu navegador, pero algunhas características poderían non funcionar e o aspecto da aplicación podería non ser o correcto.",
     "I understand the risks and wish to continue": "Entendo os riscos e desexo continuar",
-    "Go to element.io": "Ir a element.io",
+    "Go to Pigeone.io": "Ir a Pigeone.io",
     "Failed to start": "Fallou o inicio",
     "Download Completed": "Descarga realizada",
     "Open": "Abrir",
-    "Your Element is misconfigured": "Element non está ben configurado",
-    "Your Element configuration contains invalid JSON. Please correct the problem and reload the page.": "A configuración de Element contén JSON non válido. Corrixe o problema e recarga a páxina.",
+    "Your Pigeone is misconfigured": "Pigeone non está ben configurado",
+    "Your Pigeone configuration contains invalid JSON. Please correct the problem and reload the page.": "A configuración de Pigeone contén JSON non válido. Corrixe o problema e recarga a páxina.",
     "Your browser can't run %(brand)s": "O teu navegador non pode executar %(brand)s",
     "%(brand)s uses advanced browser features which aren't supported by your current browser.": "%(brand)s utiliza características avanzadas do navegador que non están dispoñibles no teu navegador.",
     "Powered by Matrix": "Funciona grazas a Matrix",
