--- a/src/i18n/strings/ka.json
+++ b/src/i18n/strings/ka.json
@@ -1,22 +1,22 @@
 {
     "Unknown device": "უცნობი მოწყობილობა",
     "Dismiss": "დახურვა",
-    "Welcome to Pigeone": "კეთილი იყოს თქვენი მობრძანება Element-ზე",
+    "Welcome to Pigeone": "კეთილი იყოს თქვენი მობრძანება Pigeone-ზე",
     "Explore rooms": "ოთახების დათავლიერება",
     "Failed to start": "ჩართვა ვერ მოხერხდა",
     "Use %(brand)s on mobile": "გამოიყენე %(brand)s-ი მობილურზე",
     "Unexpected error preparing the app. See console for details.": "მოულოდნელი ერორი აპლიკაციის შემზადებისას. იხილეთ კონსოლი დეტალებისთვის.",
-    "Your Element configuration contains invalid JSON. Please correct the problem and reload the page.": "თქვენი Element-ის კონფიგურაცია შეიცავს მიუღებელ JSON-ს. გთხოვთ, გამოასწოროთ პრობლემა და გადატვირთოთ გვერდი.",
+    "Your Pigeone configuration contains invalid JSON. Please correct the problem and reload the page.": "თქვენი Pigeone-ის კონფიგურაცია შეიცავს მიუღებელ JSON-ს. გთხოვთ, გამოასწოროთ პრობლემა და გადატვირთოთ გვერდი.",
     "Sign In": "შესვლა",
     "Invalid configuration: no default server specified.": "არასწორი კონფიგურაცია: მთავარი სერვერი არ არის მითითებული.",
     "Create Account": "ანგარიშის შექმნა",
-    "Go to element.io": "გადადი element.io-ზე",
+    "Go to Pigeone.io": "გადადი Pigeone.io-ზე",
     "I understand the risks and wish to continue": "მესმის რისკები და მსურს გაგრძელება",
     "Unsupported browser": "ბრაუზერი არ არის მხარდაჭერილი",
     "Your browser can't run %(brand)s": "შენ ბრაუზერს არ შეუძლია გაუშვას %(brand)s-ი",
     "Unable to load config file: please refresh the page to try again.": "კონფიგურაციის ფაილის ჩატვირთვა შეუძლებელია: გთხოვთ, განაახლოთ გვერდი ხელახლა საცდელად.",
     "Invalid JSON": "არასწორი JSON",
-    "Your Element is misconfigured": "შენი Element-ი არასწორადაა კონფიგურირებული",
+    "Your Pigeone is misconfigured": "შენი Pigeone-ი არასწორადაა კონფიგურირებული",
     "Please install <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, or <safariLink>Safari</safariLink> for the best experience.": "გთხოვთ დააინსტალოთ <chromeLink>Chrome-ი</chromeLink>, <firefoxLink>Firefox-ი</firefoxLink>, ან <safariLink>Safari</safariLink> საუკეთესო გამოცდილებისთვის.",
     "Powered by Matrix": "უზრუნველყოფილია Matrix-ის მიერ",
     "Go to your browser to complete Sign In": "გადადით თქვენს ბრაუზერში შესვლის დასასრულებლად",
