--- a/src/i18n/strings/ru.json
+++ b/src/i18n/strings/ru.json
@@ -16,10 +16,10 @@
     "Please install <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, or <safariLink>Safari</safariLink> for the best experience.": "Пожалуйста поставьте <chromeLink>Chrome</chromeLink>, <firefoxLink>Firefox</firefoxLink>, или <safariLink>Safari</safariLink> для лучшей совместимости.",
     "You can continue using your current browser, but some or all features may not work and the look and feel of the application may be incorrect.": "Вы можете продолжать пользоваться этим браузером, но некоторые возможности будут недоступны и интерфейс может быть отрисован неправильно.",
     "I understand the risks and wish to continue": "Я понимаю риск и хочу продолжить",
-    "Go to element.io": "К element.io",
+    "Go to Pigeone.io": "К Pigeone.io",
     "Failed to start": "Старт не удался",
-    "Your Element is misconfigured": "Ваш Element неверно настроен",
-    "Your Element configuration contains invalid JSON. Please correct the problem and reload the page.": "Конфигурация Element содержит неверный JSON. Исправьте проблему и обновите страницу.",
+    "Your Pigeone is misconfigured": "Ваш Pigeone неверно настроен",
+    "Your Pigeone configuration contains invalid JSON. Please correct the problem and reload the page.": "Конфигурация Pigeone содержит неверный JSON. Исправьте проблему и обновите страницу.",
     "Download Completed": "Загрузка завершена",
     "Open": "Открыть",
     "Your browser can't run %(brand)s": "Ваш браузер не может запустить %(brand)s",
