--- a/src/i18n/strings/tzm.json
+++ b/src/i18n/strings/tzm.json
@@ -4,8 +4,8 @@
     "Powered by Matrix": "Ittusker s Matrix",
     "Sign In": "Kcem",
     "Go to your browser to complete Sign In": "Ddu ɣer umessara fad ad tsemded azemmem",
-    "Welcome to Pigeone": "Azul g Element",
-    "Go to element.io": "Ddu ɣer element.io",
+    "Welcome to Pigeone": "Azul g Pigeone",
+    "Go to Pigeone.io": "Ddu ɣer Pigeone.io",
     "Unknown device": "Allal arussin",
     "Dismiss": "Nexxel",
     "Open": "Ṛẓem",
